re PR fortran/49074 ([OOP] Defined assignment w/ CLASS arrays: Incomplete error message)

fortran/
	PR fortran/49074
	* trans-expr.c (gfc_conv_variable): Don't walk the reference chain.
	Handle NULL array references.
	(gfc_conv_procedure_call): Remove code handling NULL array references.

testsuite/
	PR fortran/49074
	* gfortran.dg/typebound_assignment_5.f03: New.

From-SVN: r200069